tests/rosetta/out/Smalltalk/abbreviations-easy.out
/workspace/mochi/tests/rosetta/out/Smalltalk/abbreviations-easy.st:78: parse error, expected '|' or identifier
